# internal/features/users/transport/http/get_user_by_username.go
@@ -9,17 +9,6 @@ import (
 
 type GetUserByUsernameResponse UserResponse
 
-// GetUserByUsername godoc
-// @Summary Get user by username
-// @Description Get user by username
-// @Tags users
-// @Produce json
-// @Param username query string true "Username"
-// @Success 200 {object} GetUserByUsernameResponse "Successfully retrieved user"
-// @Failure 400 {object} core_http_response.ErrorResponse "Bad request"
-// @Failure 404 {object} core_http_response.ErrorResponse "User not found"
-// @Failure 500 {object} core_http_response.ErrorResponse "Internal server error"
-// @Router /users [get]
 func (h *UsersHTTPHandler) GetUserByUsername(rw http.ResponseWriter, r *http.Request) {
 	ctx := r.Context()
 	log := core_logger.FromContext(ctx)
